[package]
name = "rinova-proxy-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Proxy subscription to Clash config converter — SDK"
readme = "README.md"
documentation = "https://docs.rs/rinova-proxy-sdk"
keywords = ["proxy", "subscription", "clash", "shadowsocks", "vmess", "trojan", "hysteria2"]
categories = ["network-programming", "web-programming::http-client"]
exclude = ["/tests"]

[dependencies]
axum = "0.8"
base64 = "0.22"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
url = "2"
urlencoding = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lib]
name = "rinova_proxy_sdk"
path = "src/lib.rs"
